--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "This repo contains the challenge content for week 10",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^9.2.12"
+    "inquirer": "^8.2.4",
+    "jest": "^29.7.0"
   }
 }
